# tacklelib--3dparty--p7client

./: .gitattributes  CMakeLists.txt  README_EN.txt  changelog.txt
Headers/: GTypes.h  P7_Client.h  P7_Cproxy.h  P7_Extensions.h  P7_Version.h
Shared/: IFile.h  IPerformanceInfo.h  QStringHelper.h
Sources/: ClBaical.cpp  ClBaical.h  ClFile.cpp  ClFile.h  ClNull.cpp  ClNull.h  ClText.cpp  ClText.h  ClTextFile.h  ClTextSyslog.h  Client.cpp  Client.h  CommonClient.h  Proxy.cpp  Telemetry.cpp  Telemetry.h  Trace.cpp  Trace.h
Wrappers/C#/: P7.cs
Wrappers/Py/: P7.py
